glx/testdata/valid/temporal-properties-simple/archive.glx
# Valid: Simple temporal property values
# Tests that temporal properties can accept simple string/date values

places:
  place-leeds:
    name: "Leeds"
    type: city

  place-london:
    name: "London"
    type: city

# Vocabularies
place_types:
  city:
    label: "City"
    description: "A city or town"

person_properties:
  name:
    label: "Name"
    description: "Person's name as recorded, with optional structured breakdown"
    value_type: string
    temporal: true
    fields:
      given:
        label: "Given Name"
        description: "Given/first name(s)"
      surname:
        label: "Surname"
        description: "Family name"

  birth_country:
    label: "Birth Country"
    description: "Country of birth (custom non-temporal property for this fixture)"
    value_type: string
    temporal: false  # Non-temporal property

  occupation:
    label: "Occupation"
    description: "Profession or trade"
    value_type: string
    temporal: true

  residence:
    label: "Residence"
    description: "Place of residence"
    reference_type: places
    temporal: true

# Person using simple temporal values (not lists)
persons:
  person-john:
    properties:
      name:
        value: "John Smith"
        fields:
          given: "John"
          surname: "Smith"
      birth_country: "England"     # Simple value for non-temporal - VALID
      occupation: "blacksmith"     # Simple string for temporal property - VALID
      residence: "place-leeds"     # Simple reference for temporal property - VALID
