glx/testdata/invalid/assertion-unknown-property/archive.glx
# Warning-level: Unknown property not in property vocabulary
# This should generate a warning but not fail - allows flexibility

persons:
  person-john:
    properties:
      name:
        value: "John Smith"
        fields:
          given: "John"
          surname: "Smith"

sources:
  source-record:
    title: "Historical Record"

citations:
  citation-record:
    source: source-record

# This assertion uses an unknown property that's not in person_properties vocabulary
# Should generate a WARNING but still validate (allows emerging properties)
assertions:
  assertion-custom-property:
    subject:
      person: person-john
    property: custom_property_not_in_vocab  # WARNING: unknown property
    value: "some value"
    citations:
      - citation-record
    confidence: medium

# Define person_properties vocabulary for this archive
person_properties:
  name:
    label: "Name"
    description: "Person's name as recorded"
    value_type: string
    temporal: true
    fields:
      given:
        label: "Given Name"
        description: "Given/first name(s)"
      surname:
        label: "Surname"
        description: "Family name"
